other navigations and session management have been implemented

--- a/src/admin/add-job/admin-add-job.html
+++ b/src/admin/add-job/admin-add-job.html
@@ -45,7 +45,10 @@
     };
   </script>
 </head>
-<body class="flex h-screen overflow-hidden bg-white dark:bg-neutral-dark text-neutral-dark dark:text-white">
+<body class="flex h-screen overflow-hidden
+ bg-gradient-to-br from-blue-50 to-white 
+             dark:from-neutral-mid dark:to-neutral-light
+             text-neutral-dark dark:text-white font-sans">
 
   <!-- Sidebar -->
   <aside id="sidebar" class="bg-white dark:bg-neutral-dark text-neutral-dark dark:text-white 
