--- a/src/auth/auth-login.html
+++ b/src/auth/auth-login.html
@@ -43,7 +43,7 @@
 <body class="min-h-screen bg-gradient-to-br from-blue-50 to-white flex items-center justify-center p-4 relative">
 
  <!-- Back Button (Top Right) -->
-<button onclick="history.back()" 
+<button id="back"
     class="absolute top-6 right-6 flex items-center space-x-2 text-white 
            bg-gradient-to-r from-primary to-secondary 
            px-4 py-2 rounded-lg 
