--- a/src/admin/dashboard/dashboard.html
+++ b/src/admin/dashboard/dashboard.html
@@ -68,42 +68,42 @@
     <nav class="flex-1 p-4 space-y-2 overflow-y-auto">
       <a href="../dashboard/dashboard.html" 
    class="flex items-center py-2 px-3 rounded 
-          transition-all duration-500 ease-in-out
-          hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
+          transition-all duration-200 ease-in-out
+          bg-gradient-to-r from-primary to-secondary text-white shadow">
   <i class="fas fa-home w-5 mr-2"></i> Dashboard
 </a>
 
 <a href="../add-job/V2.html" 
    class="flex items-center py-2 px-3 rounded 
-          transition-all duration-500 ease-in-out
+          transition-all duration-200 ease-in-out
           hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
   <i class="fas fa-tasks w-5 mr-2"></i> Manage Jobs
 </a>
 
-<a href="./manage-applications.html" 
+<a href="../applications-management/applications-management.html" 
    class="flex items-center py-2 px-3 rounded 
-          transition-all duration-500 ease-in-out
-          bg-gradient-to-r from-primary to-secondary text-white shadow">
+          transition-all duration-200 ease-in-out
+          hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
   <i class="fas fa-folder-open w-5 mr-2"></i> Manage Applications
 </a>
 
 <a href="../manage-rounds/manage-rounds.html" 
    class="flex items-center py-2 px-3 rounded 
-          transition-all duration-300 ease-in-out
+          transition-all duration-200 ease-in-out
           hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
   <i class="fas fa-layer-group w-5 mr-2"></i> Rounds Management
 </a>
 
-<a href="./backup-recovery.html" 
+<a href="../backup/backup.html" 
    class="flex items-center py-2 px-3 rounded 
-          transition-all duration-300 ease-in-out
+          transition-all duration-200 ease-in-out
           hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
   <i class="fas fa-database w-5 mr-2"></i> Backup & Recovery
 </a>
 
 <a href="./settings.html" 
    class="flex items-center py-2 px-3 rounded 
-          transition-all duration-300 ease-in-out
+          transition-all duration-200 ease-in-out
           hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
   <i class="fas fa-cog w-5 mr-2"></i> Settings
 </a>
