--- a/src/admin/manage-rounds/manage-rounds.html
+++ b/src/admin/manage-rounds/manage-rounds.html
@@ -22,50 +22,95 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <script>
     tailwind.config = {
-      darkMode: 'class',
-      theme: {
-        extend: {
-          fontFamily: { sans: ['Inter', 'sans-serif'] },
-          colors: {
-            primary: "#265DF5",
-            secondary: "#0CADF3",
-            darkblue: "#0A1A2F",
-            neutral: { dark: "#0D1B2A", mid: "#1B263B", light: "#415A77" },
-            success: "#28A745",
-            danger: "#DC3545",
-            baselight: "#F4F6FA",
-            white: "#FFFFFF",
-          },
-        },
+  darkMode: 'class',
+  theme: {
+    extend: {
+      colors: {
+        primary: "#265DF5",
+        secondary: "#0CADF3",
+        darkblue: "#0A1A2F",
+        neutral: { dark: "#0D1B2A", mid: "#1B263B", light: "#415A77" },
+        success: "#28A745",
+        danger: "#DC3545",
+        baselight: "#F4F6FA",
+        white: "#FFFFFF",
       },
-    };
+      fontFamily: {
+        sans: ['Inter', 'ui-sans-serif', 'system-ui', 'sans-serif'],
+      },
+    },
+  },
+};
   </script>
 </head>
-<body class="flex h-screen overflow-hidden font-sans bg-basolight dark:bg-neutral-dark text-neutral-dark dark:text-white">
+<body class="flex h-screen overflow-hidden font-sans
+ bg-gradient-to-br from-blue-50 to-white 
+             dark:from-neutral-mid dark:to-neutral-light
+             text-neutral-dark dark:text-white font-sans">
 
   <!-- Sidebar -->
-  <aside id="sidebar" class="bg-white dark:bg-neutral-dark w-64 flex flex-col fixed top-16 left-0 h-[calc(100%-4rem)] transform -translate-x-full lg:translate-x-0 lg:relative transition-transform duration-300 z-30 shadow-lg">
+   <!-- Sidebar -->
+   <aside id="sidebar" class="bg-gradient-to-br from-blue-50 to-white 
+   dark:from-darkblue dark:to-neutral-dark 
+             text-neutral-dark dark:text-white
+    w-64 flex flex-col fixed top-16 left-0 h-[calc(100%-4rem)] 
+    transform -translate-x-full lg:translate-x-0 lg:relative 
+    transition-transform duration-300 z-30 shadow-lg">
+    
     <nav class="flex-1 p-4 space-y-2 overflow-y-auto">
-      <a href="../dashboard/dashboard.html" class="flex items-center py-2 px-3 rounded transition hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
-        <i class="fas fa-home w-5 mr-2"></i> Dashboard
-      </a>
-      <a href="../add-job/V2.html" class="flex items-center py-2 px-3 rounded hover:bg-primary hover:text-white transition">
-        <i class="fas fa-tasks w-5 mr-2"></i> Manage Jobs
-      </a>
-      <a href="../applications-management/applications-management.html" class="flex items-center py-2 px-3 rounded transition hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
-        <i class="fas fa-folder-open w-5 mr-2"></i> Manage Applications
-      </a>
-      <a href="#" class="flex items-center py-2 px-3 rounded bg-gradient-to-r from-primary to-secondary text-white shadow">
-        <i class="fas fa-layer-group w-5 mr-2"></i> Rounds Management
-      </a>
-      <a href="./settings.html" class="flex items-center py-2 px-3 rounded transition hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
-        <i class="fas fa-cog w-5 mr-2"></i> Settings
-      </a>
+      <a href="../dashboard/dashboard.html" 
+   class="flex items-center py-2 px-3 rounded 
+          transition-all duration-200 ease-in-out
+          hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
+  <i class="fas fa-home w-5 mr-2"></i> Dashboard
+</a>
+
+<a href="../add-job/V2.html" 
+   class="flex items-center py-2 px-3 rounded 
+          transition-all duration-200 ease-in-out
+          hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
+  <i class="fas fa-tasks w-5 mr-2"></i> Manage Jobs
+</a>
+
+<a href="../applications-management/applications-management.html" 
+   class="flex items-center py-2 px-3 rounded 
+          transition-all duration-200 ease-in-out
+          hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
+  <i class="fas fa-folder-open w-5 mr-2"></i> Manage Applications
+</a>
+
+<a href="../manage-rounds/manage-rounds.html" 
+   class="flex items-center py-2 px-3 rounded 
+          transition-all duration-200 ease-in-out
+          bg-gradient-to-r from-primary to-secondary text-white shadow">
+  <i class="fas fa-layer-group w-5 mr-2"></i> Rounds Management
+</a>
+
+<a href="../backup/backup.html" 
+   class="flex items-center py-2 px-3 rounded 
+          transition-all duration-200 ease-in-out
+          hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
+  <i class="fas fa-database w-5 mr-2"></i> Backup & Recovery
+</a>
+
+<a href="./settings.html" 
+   class="flex items-center py-2 px-3 rounded 
+          transition-all duration-200 ease-in-out
+          hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
+  <i class="fas fa-cog w-5 mr-2"></i> Settings
+</a>
+
     </nav>
     <div class="p-4 border-t border-gray-200 dark:border-gray-800">
-      <button class="w-full flex items-center justify-center py-2 px-4 bg-danger hover:bg-red-600 rounded transition">
-        <i class="fas fa-sign-out-alt w-5 mr-2"></i> Logout
-      </button>
+      <button class="w-full flex items-center justify-center 
+        bg-gradient-to-r from-primary to-secondary 
+        text-white px-4 py-2 rounded-lg 
+        hover:from-secondary hover:to-primary 
+        transform transition-all duration-500 ease-in-out 
+        hover:scale-105 shadow-md">
+  <i class="fas fa-sign-out-alt w-5 mr-2"></i> Logout
+</button>
+
     </div>
   </aside>
 
@@ -75,21 +120,38 @@
   <!-- Main -->
   <div class="flex-1 flex flex-col overflow-hidden">
     <!-- Header -->
+    
     <header class="bg-white dark:bg-neutral-dark shadow fixed top-0 left-0 right-0 z-40 h-16 w-full">
-      <div class="flex items-center justify-between h-full px-4">
-        <div class="flex items-center space-x-3">
-          <button id="menu-toggle" class="lg:hidden rounded-md hover:bg-gray-200 dark:hover:bg-neutral-mid transition box-border">
-            <i id="menu-icon" class="fas fa-bars w-6 h-6 text-neutral-dark dark:text-white"></i>
-          </button>
-          <h2 class="text-lg md:text-xl font-semibold text-gray-800 dark:text-white whitespace-nowrap">Job Hive</h2>
-        </div>
-        <div class="flex items-center space-x-3">
-          <button id="dark-toggle" class="rounded-md p-2 hover:bg-gray-200 dark:hover:bg-neutral-mid transition">
-            <i class="fas fa-moon w-5 h-5 text-gray-700 dark:text-white"></i>
-          </button>
-        </div>
+  <div class="flex items-center justify-between h-full px-6">
+    <div class="flex items-center space-x-4">
+      <!-- Mobile Menu Toggle -->
+      <button id="menu-toggle" class="lg:hidden rounded-md hover:bg-gray-200 dark:hover:bg-neutral-mid transition">
+        <i id="menu-icon" class="fas fa-bars w-6 h-6 text-neutral-dark dark:text-white"></i>
+      </button>
+
+      <!-- Branding -->
+      <div class="flex items-center">
+        <span class="text-xl sm:text-2xl md:text-2xl font-bold 
+                     text-blue-600 dark:text-blue-400 font-sans">
+          JobHive
+        </span>
       </div>
-    </header>
+    </div>
+
+    <!-- Right Controls -->
+    <div class="flex items-center space-x-4">
+      <!-- Dark Mode Toggle -->
+      <button id="dark-toggle" class="rounded-md p-2 hover:bg-gray-200 dark:hover:bg-neutral-mid transition">
+        <i class="fas fa-moon w-5 h-5 text-gray-700 dark:text-white"></i>
+      </button>
+
+      <!-- User Avatar -->
+     <button class="rounded-full overflow-hidden w-10 h-10 bg-gray-300 dark:bg-gray-600 flex items-center justify-center hover:ring-2 hover:ring-primary transition">
+           <span>A</span>
+          </button>
+    </div>
+  </div>
+</header>
 
     <!-- Content -->
     <main class="flex-1 overflow-auto p-4 sm:p-6 mt-16 bg-basolight dark:bg-neutral-mid">
@@ -136,7 +198,7 @@
       </div>
 
       <!-- Table -->
-      <div class="overflow-x-auto bg-white dark:bg-neutral-dark shadow-md rounded-lg">
+      <div class="overflow-x-auto bg-white dark:bg-neutral-dark shadow-md rounded-lg font-sans">
         <table class="min-w-full border-collapse text-sm">
           <thead>
             <tr class="bg-primary text-white">
@@ -243,7 +305,7 @@ function renderFilters() {
 // Update Round filter based on selected Job & Location
 function updateRoundFilter() {
   // If no job/location selected, show all rounds
-  if (!jobFilter.value && !locationFilter.value) {
+  if (!jobFilter.value || !locationFilter.value) {
     const allRoundNames = [...new Set(allRounds.map(r => r.roundName))];
     roundFilter.innerHTML = `<option value="">Filter by Round</option>` + allRoundNames.map(r => `<option>${r}</option>`).join("");
     return;
@@ -254,23 +316,24 @@ function updateRoundFilter() {
     applicationRounds
       .filter(r => (!jobFilter.value || r.jobTitle === jobFilter.value) &&
                    (!locationFilter.value || r.location === locationFilter.value))
-      .map(r => r.jobId)
   );
 
+
+  // console.log(jobIdSet)
   // Filter rounds based on these jobIds
-  const filteredRounds = allRounds.filter(r => jobIdSet.has(r.jobId));
+  // const filteredRounds = allRounds.filter(r => jobIdSet.has(r.jobId));
 
   // Get unique round names
-  const uniqueRounds = [];
-  const roundNameSet = new Set();
-  filteredRounds.forEach(r => {
-    if (!roundNameSet.has(r.roundName)) {
-      roundNameSet.add(r.roundName);
-      uniqueRounds.push(r);
-    }
-  });
+  // const uniqueRounds = [];
+  // const roundNameSet = new Set();
+  // filteredRounds.forEach(r => {
+  //   if (!roundNameSet.has(r.roundName)) {
+  //     roundNameSet.add(r.roundName);
+  //     uniqueRounds.push(r);
+  //   }
+  // });
 
-  roundFilter.innerHTML = `<option value="">Filter by Round</option>` + uniqueRounds.map(r => `<option>${r.roundName}</option>`).join("");
+  roundFilter.innerHTML = `<option value="">Filter by Round</option>` + Array.from(jobIdSet).map(r => `<option>${r.roundName}</option>`).join("");
 }
 
 // ========================== Event Listeners ==========================
